# SteamVR-OSVR

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  ClientDriver_OSVR.cpp  ClientDriver_OSVR.h  ClientMainloop.h  ClientMainloopThread.h  NOTICE  OSVRHMDConfig.h  README.md  STEAMVR-LICENSE  ServerDriver_OSVR.h  ValveStrCpy.h  appveyor.yml  cxx_feature_override.h.in  driver.vrdrivermanifest  driver_osvr.cpp  export.h  hmdmatrix_setidentity.h  identity.h  make_unique.h  matrix_cast.h  osvr.json  osvr_compiler_tests.h.in  osvr_device_properties.h  osvr_display_configuration.h  osvr_dll_export.h  osvr_hmd.h  osvr_tracked_device.h  platform_fixes.h  projection_matrix.h  steamvr.vrsettings  string_algo.h  stringhasprefix.h  test_hmd_driver.cpp
.github/: issue_template.md
cmake/: EnableExtraCompilerWarnings.cmake  FindOpenVR.cmake  FindSteamVR.cmake  PrintTargetProperties.cmake  SteamVRPaths.cmake
cmake/cmake-3.3.0-modules/: WriteCompilerDetectionHeader.cmake
config/: Razer_Hydra.json
devtools/: travis-build.sh  travis-install-dependencies.sh  travis-install.sh  travis-preinstall.sh
devtools/linux/: travis-install-cmake.sh  travis-install-jsoncpp.sh  travis-install-libfunctionality.sh  travis-install-opencv.sh  travis-install-osvr-core.sh  travis-install-osvr-rendermanager.sh  travis-install-ovr-sdk.sh
devtools/osx/: travis-install-osvr-rendermanager.sh  travis-install-ovr-sdk.sh
doc/: Configuration.md
headers/: driver_osvr.h  identity.h  make_unique.h  osvr_device_properties.h  osvr_dll_export.h
ignore-warning/: pop  push  switch-enum
resources/rendermodels/osvr_camera/: osvr_camera.mtl
resources/settings/: default.vrsettings
src/: AngVelTools.h  CMakeLists.txt  ClientDriver_OSVR.cpp  ClientDriver_OSVR.h  Logging.h  OSVRDisplay.cpp  OSVRDisplay.h  OSVRTrackedController.cpp  OSVRTrackedController.h  OSVRTrackedDevice.cpp  OSVRTrackedDevice.h  OSVRTrackedDeviceController.cpp  OSVRTrackedDeviceController.h  OSVRTrackedHMD.cpp  OSVRTrackedHMD.h  OSVRTrackingReference.cpp  OSVRTrackingReference.h  PathTreeUtil.h  PoseUtil.cpp  PoseUtil.h  PrettyPrint.cpp  PrettyPrint.h  PropertyMap.h  PropertyProperties.h  ServerDriver_OSVR.cpp  ServerDriver_OSVR.h  Settings.h  ValveStrCpy.h  Version.h.in  WatchdogDriver_OSVR.cpp  WatchdogDriver_OSVR.h  driver_osvr.cpp  driver_osvr.h  matrix_cast.h  osvr_device_properties.h  osvr_dll_export.h  osvr_platform.h.in  osvr_tracked_device.cpp  pretty_print.h  test_hmd_driver.cpp
src/display/: CMakeLists.txt  Display.h  DisplayEnumerator.cpp  DisplayEnumerator.h  DisplayEnumerator_Linux.cpp  DisplayEnumerator_Linux.h  DisplayEnumerator_MacOSX.h  DisplayEnumerator_Windows.cpp  DisplayEnumerator_Windows.h
src/test_hmd_driver/: test_hmd_driver.cpp
test/: CMakeLists.txt  test_HeadModel.cpp  test_OSVRDisplay.cpp  test_PoseUtil.cpp
test/display/: CMakeLists.txt  osvr_print_displays.cpp
test/server/: CMakeLists.txt  ServerDriverHost.cpp  ServerDriverHost.h  VRSettings.cpp  VRSettings.h  test_hmd_driver.cpp
test/util/: CMakeLists.txt  test_PathTreeUtils.cpp
